@@ -1007,6 +1007,7 @@ window.settings.changesInSettings.mgt2Folder|Mad Games Tycoon folder:
 window.settings.changesInSettings.language|Language:
 window.settings.changesInSettings.updateChannel|Update channel:
 window.settings.changesInSettings.saveLogs|Save logs:
+window.settings.changesInSettings.exportStorage|Enable export storage:
 window.settings.changesNotSaved.part1|You have made changes that have not been saved:
 window.settings.changesNotSaved.part2|Do you want to save them?
 window.settings.changesNotSaved.title|Unsaved changes
@@ -1038,6 +1039,8 @@ window.settings.updateChannel.toolTip|<html>Select what channel should be search
 window.settings.windowTitle|Settings
 window.settings.checkBox.saveLogs|Save logs
 window.settings.checkBox.saveLogs.toolTip|<html>Check this box to save all logs.<br>If disabled only the last log is saved.
+window.settings.exportStorage.checkBoxText|Store exports
+window.settings.exportStorage.checkBoxText.toolTip|If activated, exports are no longer overwritten, but a new folder is created for each export
 
 window.npcGamesList.title|Modify NPC games list
 window.npcGamesList.label|<html>Select what genre should be added/removed from the npc games list.<br>When your genre is listed on the npc games list, npc companies will be able to create games with the selected genre.
